# kicad-mcp

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.kicad10  GOVERNANCE.md  MAINTAINERS.md  OPERATIONS.md  PUBLIC_LISTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  Taskfile.yml  compatibility.yaml  mcp.json  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json  renovate.json  server.json  uv.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/rulesets/: main.json
.github/workflows/: ci.yml  codeql.yml  docs.yml  fuzz.yml  gitleaks.yml  gui-ci.yml  gui-release.yml  publish-mcp-container.yml  publish-mcp-registry.yml  publish-npm.yml  publish-protocol-schemas.yml  publish-python.yml  regression-zoo.yml  release-please.yml  scorecard.yml  web-tray-ci.yml
docs/: accessibility.md  autonomy.md  branch-protection.md  companion-plugin.md  development.md  doppler-setup.md  errors.md  index.md  internationalization.md  maintenance-policy.md  openssf-best-practices.md  openssf-silver-evidence.md  privacy.md  public-listing.md  publishing.md  release-process.md  release.md  repository-operations.md  testing.md  tools-reference.generated.md  tools-reference.md  workflow-security.md
docs/adr/: 0001-repository-topology.md  0002-version-single-source.md  0003-export-tool-naming.md  0004-output-schema-evolution-policy.md
docs/agents/: antigravity.md  chatgpt-app.md  claude-ai.md  cline.md  (+17 more)
evals/: README.md  golden_corpus.yaml
fuzz/: fuzz_sexpr.py
performance/: baselines.json
scripts/: branch_hygiene_report.py  build_parity_matrix.py  build_toolsets.py  check-release-provenance.mjs  check-review-threads.mjs  check_architecture_boundaries.py  check_compatibility_matrix.py  check_docker_metadata.py  check_no_pcbnew.py  check_release_preflight.py  check_submission_readiness.py  check_tool_contracts.py  check_workflows.py  classify-gh-failure.mjs  generate_icons.py  generate_release_evidence.py  generate_tauri_icons.py  generate_tools_reference.py  kicad_canary.py  run_pytest.py  runtime_policy.py  security_local.py  sync_mcp_metadata.py  validate_mcp_manifest.py  verify-npm-release.mjs  vscode_canary.py  workflow_security.py
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  synthetic.py
(+387 files in other folders)
