[package]
name = "kicad-mcp-pro"
version = "3.9.0"
description = "KiCad MCP Pro — Desktop EDA automation with AI agent integration"
authors = ["KiCad MCP Team"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "kicad_mcp_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "8"
