[package]
name = "kicad-mcp-pro"
version = "3.14.1"
description = "KiCad MCP Pro — Desktop EDA automation with AI agent integration"
authors = ["KiCad MCP Team"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "kicad_mcp_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["macos-private-api", "tray-icon", "wry", "common-controls-v6", "dynamic-acl", "x11", "dbus"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "8"

# Compression via brotli requires alloc-no-stdlib v2.x, which defines a custom
# Allocator trait conflicting with std::alloc::Allocator (Rust 1.85+). We
# disable tauri's "compression" feature (see tauri dep above) to exclude
# brotli entirely, eliminating the conflict.
